Try to fix footer overflow on mobile

--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -1,6 +1,5 @@
 footer {
     width: 100%;
-    overflow-x: hidden;
     flex-shrink: 0;
 }
 
